# OllamaCoder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BATCH_PROCESSING_SUMMARY.md  CELERY_INTEGRATION_SUMMARY.md  CLAUDE.md  README.md  USAGE_CHEATSHEET.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pre-commit.yml  python-app.yml  test.yml
docs/: BATCH_PROCESSING.md  CELERY_BATCH.md
examples/: batch_example.py
scripts/: benchmark.py  benchmark_summary.sh  start_celery_worker.sh
src/ollama_coder/: __init__.py  api.py  hybrid_agent.py  mcp_server.py
src/ollama_coder/batch/: __init__.py  celery_app.py  celery_tasks.py  job_queue.py  processors.py  progress.py
src/ollama_coder/core/: __init__.py  architect.py  config.py  devops.py  guardrail.py  mcp_loader.py  metrics.py  planner.py  squad.py  supervisor.py  validator.py
src/ollama_coder/pydantic_agents/: __init__.py  coding_agent.py  docs_agent.py  models.py  orchestrator.py  planner_agent.py  security_agent.py  tools.py
src/ollama_coder/tools/: __init__.py  iso42010_analyzer.py
tests/: __init__.py  test_batch_processing.py  test_batch_simple.py  test_config.py  test_guardrail.py  test_hello.py  test_iso42010_analyzer.py  test_metrics.py  test_supervisor.py
